# pb2025_sentry_robot

./: .gitignore  LICENSE  README.md  reflog.txt  烧饼常用指令.md  自瞄系统调试指南.md
FYT/: Explaining TF Tree Dynamics.md  F_FYT_last_commits.txt  F_FYT_reflog.txt  F_FYT_reflog_date.txt  diff_node.txt  force_shoot.sh  git_status_current.txt  stash_content.diff  三个核心问题深度解答.md  独立视觉TF树方案可行性分析.md
FYT/.git_hide/: config  index  packed-refs
FYT/.git_hide/logs/: HEAD
FYT/rm_auto_aim/armor_detector/: package.xml
FYT/rm_upstart/: register_service.sh  rm_watch_dog.sh
auto_aim_interfaces/: CMakeLists.txt
auto_aim_interfaces/msg/: Armor.msg  Dist.msg  Target.msg  Top.msg
dependencies/hik_camera_ros2_driver/: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
dependencies/hik_camera_ros2_driver/.git_hide/: config  index  packed-refs
dependencies/hik_camera_ros2_driver/.git_hide/logs/: HEAD
dependencies/hik_camera_ros2_driver/.git_hide/objects/pack/: pack-98882d0266b3862d0d849a62c1537220673cfb84.idx
dependencies/hik_camera_ros2_driver/.git_hide/refs/heads/: main
dependencies/hik_camera_ros2_driver/.github/workflows/: ci.yml
dependencies/hik_camera_ros2_driver/config/: camera_info.yaml  camera_params.yaml
dependencies/hik_camera_ros2_driver/hikSDK/include/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvISPErrorDefine.h  PixelType.h
dependencies/hik_camera_ros2_driver/launch/: hik_camera_launch.py
dependencies/hik_camera_ros2_driver/src/: hik_camera_node.cpp
interfaces/pb_rm_interfaces/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
interfaces/pb_rm_interfaces/.git_hide/: config  index  packed-refs
interfaces/pb_rm_interfaces/.git_hide/logs/: HEAD
interfaces/pb_rm_interfaces/.git_hide/objects/pack/: pack-51abf0156ddaa4a983fb0b21df5e4784934170f5.idx  pack-51abf0156ddaa4a983fb0b21df5e4784934170f5.pack
interfaces/pb_rm_interfaces/.git_hide/refs/heads/: main
interfaces/pb_rm_interfaces/.github/workflows/: ci.yml
interfaces/pb_rm_interfaces/msg/: Gimbal.msg  GimbalCmd.msg  Models.msg  RobotStateInfo.msg
interfaces/pb_rm_interfaces/msg/referee/: Buff.msg  GameRobotHP.msg  GameStatus.msg  GroundRobotPosition.msg  RfidStatus.msg  RobotStatus.msg
pb2025_nav2_patrol/: README.md  package.xml  setup.cfg  setup.py
pb2025_nav2_patrol/config/: waypoints.yaml
pb2025_nav2_patrol/launch/: patrol_launch.py
pb2025_nav2_patrol/pb2025_nav2_patrol/: patrol_node.py
pb2025_robot_description/: .gitignore
pb2025_robot_description/.git_hide/: config  index  packed-refs
pb2025_robot_description/launch/: robot_description_launch.py
pb2025_sentry_behavior/: CMakeListsCP.txt  CONTRIBUTING.md  README.md  dependencies.repos  package.xml
pb2025_sentry_behavior/.git_hide/: config  index  packed-refs
pb2025_sentry_behavior/behavior_trees/: Project.btproj  dev_rm.xml  models.xml  rmul_2025.xml
pb2025_sentry_behavior/launch/: pb2025_sentry_behavior_launch.py
pb2025_sentry_behavior/params/: sentry_behavior.yaml
pb2025_sentry_behavior/src/: pb2025_sentry_behavior_client.cpp  pb2025_sentry_behavior_server.cpp
pb2025_sentry_bringup/: CMakeLists.txt  package.xml
pb2025_sentry_bringup/launch/: bringup.launch.py  fyt_vision.launch.py  record_rosbag_launch.py  rviz_launch.py
pb2025_sentry_bringup/map/: .gitignore
pb2025_sentry_bringup/params/: camera_info.yaml  node_params.yaml
pb2025_sentry_bringup/rviz/: sentry_default_view.rviz
pb2025_sentry_nav/.git_hide/: config  index  packed-refs
pb2025_sentry_nav/fake_vel_transform/: CMakeLists.txt
pb2025_sentry_nav/ign_sim_pointcloud_tool/: CMakeLists.txt
pb2025_sentry_nav/livox_ros_driver2/: .git_hide
pb2025_sentry_nav/loam_interface/: CMakeLists.txt
pb2025_sentry_nav/pb2025_nav_bringup/: CMakeLists.txt
pb2025_sentry_nav/pb_nav2_plugins/: .git_hide  CMakeLists.txt
pb2025_sentry_nav/pb_omni_pid_pursuit_controller/: .git_hide  .pre-commit-config.yaml  CMakeLists.txt
pb2025_sentry_nav/pb_teleop_twist_joy/: .git_hide  CMakeLists.txt
pb2025_sentry_nav/point_lio/: .git_hide  CMakeLists.txt
pb2025_sentry_nav/pointcloud_to_laserscan/: .git_hide
pb2025_sentry_nav/sensor_scan_generation/: CMakeLists.txt
pb2025_sentry_nav/small_gicp_relocalization/: .git_hide  CMakeLists.txt
pb2025_sentry_nav/small_gicp_relocalization/.github/workflows/: build_and_test.yml
rmu_gazebo_simulator/: .pre-commit-config.yaml
rmu_gazebo_simulator/.git_hide/: config  index  packed-refs
rmu_gazebo_simulator/.github/: mergify.yml
rmu_gazebo_simulator/rmu_gazebo_simulator/: CMakeLists.txt
simple_sentry_control/: CMakeLists.txt  package.xml
simple_sentry_control/launch/: YQ3V3.launch.py  simple_sentry_control.launch.py  simple_sentry_control_two_point.launch.py
simple_sentry_control/src/: simple_sentry_control_node.cpp  simple_sentry_control_two_point_node.cpp  waypoint_manager.cpp
standard_robot_pp_ros2/: 0001-fix-change-gimbal_link-TF-parent-from-odom-to-base_f.patch  CMakeLists.txt  P_reflog_date.txt  dependencies.repos  git_log_tmp.txt  gitlog_tmp.txt  package.xml  tmp_lidar_fix_code.cpp  tmp_lidar_fix_code_utf8.cpp  tmp_old_code.cpp  tmp_old_code_fixed.cpp  tmp_pre_fix_code.cpp  tmp_pre_fix_code_utf8.cpp
standard_robot_pp_ros2/.git_hide/: config  index  packed-refs
standard_robot_pp_ros2/config/: launch_params.yaml
standard_robot_pp_ros2/launch/: standard_robot_pp_ros2.launch.py
standard_robot_pp_ros2/src/: crc8_crc16.cpp  standard_robot_pp_ros2.cpp
standard_robot_pp_ros2/urdf/: rm_gimbal.urdf.xacro
tools/pcd2pgm/: CMakeLists.txt  package.xml
tools/teleop_gimbal_keyboard/: README.md  dependencies.repos  package.xml  setup.cfg  setup.py
tools/teleop_gimbal_keyboard/.git_hide/: config  index  packed-refs
tools/teleop_gimbal_keyboard/.git_hide/logs/refs/remotes/origin/: HEAD
tools/teleop_gimbal_keyboard/.git_hide/objects/pack/: pack-f34d7e9526a413465ba09856d8d4665401a3ed2b.idx  pack-f34d7e9526a413465ba09856d8d4665401a3ed2b.pack
tools/teleop_gimbal_keyboard/.git_hide/refs/heads/: main
tools/teleop_gimbal_keyboard/teleop_gimbal_keyboard/: teleop_gimbal_keyboard.py
(+267 files in other folders)
