<?xml version="1.0"?>
<package format="3">
  <name>pb2025_nav2_patrol</name>
  <version>0.1.0</version>
  <description>Simple patrol package for nav2: follow waypoints and subscribe to /goal_plan</description>
  <maintainer email="you@example.com">PolarBear</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
