<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_gimbal_keyboard</name>
  <version>1.0.0</version>
  <description>A robot-agnostic teleoperation node to convert keyboard commands to JointState messages.</description>

  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>Apache-2.0</license>

  <author email="lihanchen2004@163.com">Lihan Chen</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>pb_rm_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
